[project]
name = "ONBwall"
version = "0.1.0"
description = "ONBwall"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = ["nonebot_plugin_waiter"]
plugin_dirs = ["onbwall/plugins"]
builtin_plugins = ["echo"]
